# lango

./: .gitignore  CHANGELOG.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.githooks/: pre-push
.github/workflows/: release.yml
docs/: plan.md  report.md
scripts/: build-installer.ps1  build.sh  dev.ps1  dev.sh  release-auto.ps1
sidecar/: dictover-sidecar.spec  engines.py  main.py  ocr.py  requirements.txt  translation.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: automation.rs  bridge.rs  config.rs  debug_trace.rs  hotkey.rs  indicator.rs  main.rs  ocr.rs  selection.rs  sidecar_runtime.rs  test_hwnd.rs
src-tauri/windows/: hooks.nsh
src/components/DebugLog/: DebugLogPopup.tsx  DebugLogWindow.tsx
src/components/OcrOverlay/: OcrOverlayWindow.tsx
src/components/Popover/: ImageSubPanel.tsx  Popover.tsx  PopoverIcons.tsx  SubPanel.tsx  popover.utils.ts
src/components/QuickConvert/: QuickConvertPopup.tsx
src/components/Settings/: SettingsPanel.tsx
src/constants/: languages.ts  settingsI18n.ts
src/hooks/: usePopover.ts  usePopoverResize.ts  useSubPanelPosition.ts
src/services/: config.ts  debugLog.ts  layoutAcceptance.ts  quickConvert.ts  tauri.ts
src/types/: selectionAnchor.ts  settings.ts
web/: index.html
web/assets/: video1.webm  video3.webm
web/releases/: latest.json
