[package]
name = "dictover_desktop"
version = "0.4.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3.4"
base64 = "0.22"
enigo = "0.6"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rdev = { version = "0.5", features = ["unstable_grab"] }
screenshots = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
webbrowser = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
